{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 61,
  "lineage": "ca26bd3e-15d4-3540-0380-f1333739403b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-07T21:23:09.771-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/true-loader-349707/global/firewalls/fw-allow-http",
            "log_config": [],
            "name": "fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/networks/default",
            "priority": 1000,
            "project": "true-loader-349707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/firewalls/fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220530",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/zones/asia-south2-a/disks/test-vm-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/true-loader-349707/zones/asia-south2-a/instances/test-vm-1",
            "instance_id": "5678885523763862208",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "test": "Webserver1"
            },
            "metadata_fingerprint": "iTfKBem6juQ=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential apache2; sudo echo Hello World \u003e /var/www/html/index.html",
            "name": "test-vm-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.131.4.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/networks/default",
                "network_ip": "10.190.0.10",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/regions/asia-south2/subnetworks/default",
                "subnetwork_project": "true-loader-349707"
              }
            ],
            "project": "true-loader-349707",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/zones/asia-south2-a/instances/test-vm-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http"
            ],
            "tags_fingerprint": "MulzF_u7WEg=",
            "zone": "asia-south2-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20220530",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/zones/asia-south2-a/disks/test-vm-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/true-loader-349707/zones/asia-south2-a/instances/test-vm-2",
            "instance_id": "7947424787801674682",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "test": "Webserver2"
            },
            "metadata_fingerprint": "qt62LjoaJ8c=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -yq build-essential apache2; sudo echo Hello World \u003e /var/www/html/index.html",
            "name": "test-vm-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.131.49.72",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/networks/default",
                "network_ip": "10.190.0.11",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/regions/asia-south2/subnetworks/default",
                "subnetwork_project": "true-loader-349707"
              }
            ],
            "project": "true-loader-349707",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/zones/asia-south2-a/instances/test-vm-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http"
            ],
            "tags_fingerprint": "MulzF_u7WEg=",
            "zone": "asia-south2-a"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "RATE",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/zones/asia-south2-a/instanceGroups/terraform-webservers",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 1,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-06-08T00:01:27.450-07:00",
            "enable_cdn": false,
            "fingerprint": "k-6HkzNzD10=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/healthChecks/group-http-lb-hc-default"
            ],
            "id": "projects/true-loader-349707/global/backendServices/group-http-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "group-http-lb-backend-default",
            "port_name": "http-service",
            "project": "true-loader-349707",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/backendServices/group-http-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "module.gce-lb-http.google_compute_health_check.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-07T23:43:28.349-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/true-loader-349707/global/firewalls/group-http-lb-hc-0",
            "log_config": [],
            "name": "group-http-lb-hc-0",
            "network": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/networks/default",
            "priority": 1000,
            "project": "true-loader-349707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/firewalls/group-http-lb-hc-0",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.117.54.70",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-07T23:43:28.325-07:00",
            "id": "projects/true-loader-349707/global/addresses/group-http-lb-address",
            "name": "group-http-lb-address",
            "prefix_length": 0,
            "project": "true-loader-349707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/addresses/group-http-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/true-loader-349707/global/forwardingRules/group-http-lb",
            "ip_address": "34.117.54.70",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "group-http-lb",
            "port_range": "80",
            "project": "true-loader-349707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/forwardingRules/group-http-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/targetHttpProxies/group-http-lb-http-proxy"
          },
          "dependencies": [
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_global_address.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_target_http_proxy.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-08T00:02:02.440-07:00",
            "id": "projects/true-loader-349707/global/targetHttpProxies/group-http-lb-http-proxy",
            "name": "group-http-lb-http-proxy",
            "project": "true-loader-349707",
            "proxy_bind": false,
            "proxy_id": 9048595041753102213,
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/targetHttpProxies/group-http-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/urlMaps/group-http-lb-url-map"
          },
          "dependencies": [
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default",
            "module.gce-lb-http.google_compute_url_map.default",
            "module.gce-lb-http.google_compute_url_map.https_redirect"
          ]
        }
      ]
    },
    {
      "module": "module.gce-lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-08T00:01:50.334-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/backendServices/group-http-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "5NX3-VPd0-Y=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/true-loader-349707/global/urlMaps/group-http-lb-url-map",
            "map_id": 7996208014192146353,
            "name": "group-http-lb-url-map",
            "path_matcher": [],
            "project": "true-loader-349707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/true-loader-349707/global/urlMaps/group-http-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gce-lb-http.google_compute_backend_service.default",
            "module.gce-lb-http.google_compute_health_check.default"
          ]
        }
      ]
    }
  ]
}